--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,7 +1,6 @@
 <div th:fragment="header">
 
-<!--    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">-->
-        <div>
+    <div>
         <!--    <link rel="stylesheet" href="main.css">-->
         <style>
             body {
@@ -75,10 +74,13 @@
 
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
                     <ul class="submenu">
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view">Довідки</a>
+                        <li>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/week/rubin-week-view">Довідки</a>
                         </li>
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">Звіт щоденний</a></li>
-
+                        <li>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/week/rubin-add-week">Звіт
+                                щоденний</a>
+                        </li>
                     </ul>
                 </li>
 
