--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,14 +1,12 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${title}"/>
+<!--    <title th:text="${title}"/>-->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
 <!--    <link rel="stylesheet" href="main.css">-->
 </head>
-<body>
-<body data-hasqtip="0">
-
+<body data-hasqtip="0"></body>
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="check" viewBox="0 0 16 16">
         <title>Check</title>
@@ -19,7 +17,8 @@
 <div class="container py-3">
     <header th:insert="blocks/header.html :: header"></header>
     <div class="container mt-5">
-        <h1 th:text="${title}"/>
+<!--        <h1 th:text="${title}"/>-->
     </div>
     <div th:insert="blocks/footer.html :: footer"></div>
+</div>
 </html>
