--- a/src/main/resources/templates/rubin/week/rubin-week-deteils.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-deteils.html
@@ -13,11 +13,11 @@
     <h1>Виправить помилку або повернутить на головну</h1>
     <div th:each="rwd:${rubin_week_det}" class="alert alert-info mt-2">
 
-        <h3 th:text="${rwd.pidrozdil + '   ' + rwd.data_v}"></h3>
+        <h3 th:text="${rwd.pidrozdil + ' ___ ' + rwd.data_v}"></h3>
         <p th:text="${'звернень за день :' + rwd.week_appeal}"></p>
         <p th:text="${'виданих  за день :' + rwd.week_issued }"></p>
-        <a th:href="'/rubin/week/'+ ${rwd.id} +'/update'" role="button" class="btn btn-warning">Редактировать</a>
-<!--        <a th:href="'/rubin/'+ ${el.id} +'/remove'" class="btn btn-warning" aria-pressed="false" >Удалить</a>-->
+        <a th:href="${/rubin/week/{rwd.id}/update}" role="button" class="btn btn-warning">Редактировать</a>
+        <!--        <a th:href="'/rubin/'+ ${el.id} +'/remove'" class="btn btn-warning" aria-pressed="false" >Удалить</a>-->
     </div>
 </div>
 
