--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -14,8 +14,7 @@
 
 <div class="container py-3">
     <header th:insert="blocks/header.html :: header"></header>
-    <div class="container mt-5">
-    </div>
+    <div class="container mt-5">  </div>
     <div th:insert="blocks/footer.html :: footer"></div>
 
 </div>
