--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -84,16 +84,16 @@
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
                     <ul class="submenu2">
                         <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/week/rubin-week-view">Довідки щоденні</a>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view">Довідки щоденні</a>
                         </li>
                         <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/week/rubin-add-week">Звіт щоденний</a>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">Звіт щоденний</a>
                         </li>
                         <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-view">Довідки щотижневі</a>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view">Довідки щотижневі</a>
                         </li>
                         <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="../rubin/rubin-add">Звіт тижневий</a>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-add">Звіт тижневий</a>
                         </li>
 
                     </ul>
