--- a/src/main/resources/templates/rubin/rubin-add.html
+++ b/src/main/resources/templates/rubin/rubin-add.html
@@ -7,7 +7,18 @@
 <body>
 <!--/*@thymesVar id="tit" type=""*/-->
 <div>  <header th:insert="blocks/header.html :: header"></header>
-
+    <!--    // week -   за неділю           Кількість звернень громадян щодо видачі довідок про відсутність (наявність) судимості-->
+    <!--    // week_1 - за неділю           Кількість виданих довідок про відсутність (наявність) судимості-->
+    <!--    //-->
+    <!--    // year -   З початку року   Кількість звернень громадян щодо видачі довідок про відсутність (наявність) судимості-->
+    <!--    // year_1 - З початку року   Кількість виданих довідок про відсутність (наявність) судимості-->
+<!---->
+<!--    <div th:each="rubin:${rubinList}" class="alert alert-info mt-2">-->
+<!--        <h4 th:text="${rubin.pidrozdil + ' ....  ' + #dates.format(rubin.data_v, 'dd.MM.yyyy') }"/>-->
+<!--        <p th:text="${'звернень тиждень :' +rubin.week + '  з початку року : '+rubin.year  }"/>-->
+<!--        <p th:text="${'виданих  тиждень :'+rubin.week_1 +'  з початку року : '+ rubin.year_1 }"/>-->
+<!--    </div>-->
+<!--    -->
 
     <div>
         <form action="../rubin/rubin-add" method="post">
