--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -93,7 +93,7 @@
                             <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view">Довідки щотижневі</a>
                         </li>
 <!--                        <li>-->
-<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-add">Звіт тижневий</a>-->
+<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-moth">Помісячні</a>-->
 <!--                        </li>-->
 
                     </ul>
