--- a/src/main/resources/templates/rubin/week/rubin-week-view.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-view.html
@@ -47,6 +47,7 @@
             <button type="submit" class="btn btn-success" name="action" value="search" >Пошук</button>
             <button type="submit" class="btn btn-success" name="action" value="print" >Формування, друк тижневого звіту</button>
             <button type="submit" class="btn btn-success" name="action" value="print_month" disabled>Формування, друк помісячного звіту</button>
+            <button type="submit" class="btn btn-success" name="action" value="month" disabled>Попередня помісячна інфа в звіт</button>
         </form>
     </div>
     <div>
