--- a/src/main/resources/templates/rubin/rubin-view-p.html
+++ b/src/main/resources/templates/rubin/rubin-view-p.html
@@ -17,7 +17,8 @@
             <input type="date" id="data_v" name="data_v" th:value="${dat}">
 <!--            <input type="date" th:value="${dat}" name="data_v" placeholder="Дата внесення" class="form-control" id="data_v" ><br>-->
 
-            <button type="submit" class="btn btn-success">Друк</button>
+            <button type="submit" class="btn btn-success">Формування та друк тижневї довідки РСЦ</button><br>
+            <button type="submit" class="btn btn-success" name="action" value="print_month" >Формування, друк помісячного звіту РЦС</button>
 
         </form>
     </div>
