--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -72,11 +72,11 @@
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a></li>
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Toppan CP 500</a>
                     <ul class="submenu">
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/toppan">Принтера</a>
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan">Принтера</a>
                         </li>
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/toppan-add">Добавим
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan-add">Добавим
                             принтер</a></li>
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="../printer/Total_Count">Total
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/Total_Count">Total
                             Count</a></li>
                     </ul>
                 </li>
@@ -84,17 +84,17 @@
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
                     <ul class="submenu2">
                         <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view">Довідки щоденні</a>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view">ТСЦ.. довідки щоденні</a>
                         </li>
                         <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">Звіт щоденний</a>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">ТСЦ.. звіт щоденний</a>
                         </li>
                         <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view">Довідки щотижневі</a>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view">РСЦ.. довідка щотижнева</a>
                         </li>
-<!--                        <li>-->
-<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-moth">Помісячні</a>-->
-<!--                        </li>-->
+                        <li>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-moth">РСЦ.. помісячні</a>
+                        </li>
 
                     </ul>
                 </li>
