--- a/src/main/resources/templates/rubin/week/rubin-week-view.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-view.html
@@ -17,7 +17,7 @@
         <form method="post">
             <label for="data_v"> Дата внесення  з :  </label>
                    <input type="date" name="data_v" th:value="${dat}" placeholder="Дата внесення  з " id="data_v"><br>
-            <br> <br> <br> <br> <br>
+            <br>
             <label for="data_v2"> Дата внесення по:  </label>
             <input type="date" name="data_vpo" th:value="${dat_last}" placeholder="Дата внесення по " id="data_v2"><br>
             <br>
@@ -29,12 +29,13 @@
                             th:text="${tsc.pidrozdil}">
 <!--                            th:text="${tsc.pidrozdil}+' : '+${tsc.ip}">-->
                     </option>
-                </select>
-            </div>
+                </select><br>
+            </div><br>
             <button type="submit" class="btn btn-success" name="action" value="search" >Пошук</button>
+            <button type="submit" class="btn btn-success" name="action" value="month" disabled>Попередня помісячна інфа в звіт</button>
             <button type="submit" class="btn btn-success" name="action" value="print" >Формування, друк тижневого звіту</button>
             <button type="submit" class="btn btn-success" name="action" value="print_month" >Формування, друк помісячного звіту</button>
-            <button type="submit" class="btn btn-success" name="action" value="month" disabled>Попередня помісячна інфа в звіт</button>
+
         </form>
     </div>
     <div>
