--- a/src/main/resources/templates/printer/Total_Count.html
+++ b/src/main/resources/templates/printer/Total_Count.html
@@ -3,8 +3,8 @@
 <head>
     <title>Блог РСЦ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../main.css">
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">-->
+<!--    <link rel="stylesheet" href="../main.css">-->
 </head>
 
 <body data-hasqtip="0">
