--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -84,7 +84,7 @@
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Довідки суд..</a>
                     <ul class="submenu2">
                         <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view">ТСЦ.. довідки щоденні, формавання таблиць</a>
+                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view">ТСЦ.. довідки щоденні, формування таблиць</a>
                         </li>
                         <li>
                             <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">ТСЦ.. звіт щоденний</a>
