--- a/src/main/resources/templates/rubin/week/rubin-week-deteils.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-deteils.html
@@ -21,6 +21,7 @@
 
         <a th:href="'/rubin/week/'+ ${rwd.id} +'/update'" class="btn btn-warning" aria-pressed="false" >Змінити</a>
         <a th:href="'/rubin/week/'+ ${rwd.id} +'/remove'" class="btn btn-warning" aria-pressed="false" disabled>Видалити</a>
+<!--        <a onclick="window.open('ms-excel:ofe|u|http://localhost/iis-server/test.xlsx')"> Open Excel </a>-->
     </div>
 </div>
 
