Изменения в программе недельных отчетов ТСЦ и РСЦ - 08.01.2022

--- a/src/main/resources/templates/rubin/week/rubin-week-view.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-view.html
@@ -32,9 +32,10 @@
                 </select><br>
             </div><br>
             <button type="submit" class="btn btn-success" name="action" value="search" >Пошук</button>
-            <button type="submit" class="btn btn-success" name="action" value="month" disabled>Попередня помісячна інфа в звіт</button>
+
             <button type="submit" class="btn btn-success" name="action" value="print" >Формування, друк тижневого звіту</button>
             <button type="submit" class="btn btn-success" name="action" value="print_month" >Формування, друк помісячного звіту</button>
+            <button type="submit" class="btn btn-success" name="action" value="print_week_rsc" >Тижневий, звіт РСЦ</button>
 
         </form>
     </div>
