--- a/src/main/resources/templates/rubin/week/rubin-week-view.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-view.html
@@ -33,10 +33,10 @@
             </div><br>
             <button type="submit" class="btn btn-success" name="action" value="search" >Пошук</button>
 
-            <button type="submit" class="btn btn-success" name="action" value="print" >Формування, друк тижневого звіту</button>
-            <button type="submit" class="btn btn-success" name="action" value="print_month" >Формування, друк помісячного звіту</button>
+            <button type="submit" class="btn btn-success" name="action" value="print" >Тижневий звіт ТСЦ</button>
+            <button type="submit" class="btn btn-success" name="action" value="print_month" >Помісячний звіт ТСЦ</button>
             <button type="submit" class="btn btn-success" name="action" value="print_week_rsc" >Тижневий, звіт РСЦ</button>
-
+            <button type="submit" class="btn btn-success" name="action" value="print_month_rsc" >Помісячний, звіт РСЦ</button>
         </form>
     </div>
     <div>
