--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -89,12 +89,12 @@
                         <li>
                             <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">ТСЦ.. звіт щоденний</a>
                         </li>
-                        <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view">РСЦ.. довідка щотижнева</a>
-                        </li>
-                        <li>
-                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view-month">РСЦ.. помісячні</a>
-                        </li>
+<!--                        <li>-->
+<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view">РСЦ.. довідка щотижнева</a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view-month">РСЦ.. помісячні</a>-->
+<!--                        </li>-->
 
                     </ul>
                 </li>
